2024 day 10 (#47)
* Clean up how files are handled

* Update 2020 code

* Start adding db based problems

* Start implementing day1, part1

* Day 1, part 1 working

* Clean up runner code

* Day 1, part 2 working

* Day 2, part 1 works but is too slow

* Use batch inserts

* Day 2, part 2

* Day 3 parser and db updates

* Day 3, part 1 test works

* Day 3, part 1 done

* Start on part 2

* Day 3, part 2

* Day 4, part 1 sample test passes

* Day 4, part 1 answer

* Answer correct, converting to sql

* Use DB for storing data

* Use transactions for problems

* Add formatter settings

* Initial day5 setup

* Parse input

* Clean up 2018

* Clean up 2018

* Clean up 2018

* Clean up 2019

* Clean up 2020

* Clean up 2023

* Day 5, Part 1

* Add new SQL, still not working

* Initial 2024 code

* Code cleanup

* Day 1

* Code cleanup

* Day 2, part 1

* Day 2, part 2

* Code cleanup

* Day 3, part 1

* Day 3, part 2

* Code cleanup

* Day 6, parts 1 & 2, part 2 still slow

* Work on performance fixes

* Code cleanup

* Keep track of walls separately

* Use array instead of hashmap

* Code cleanup

* Code cleanup

* Day 4, part 1

* Day 4, part 2

* Code cleanup

* Day 5 initial code

* Day 5, part 1

* Start cleaning up tests

* Day 5, part 2

* Refactor unit tests

* Set up day 7 unit tests

* Day 8, part 1

* Add initial part 2 code

* Day 8, part 2

* Code cleanup

* Day 7, part 1

* Day 7, part 1 performance fixes

* Day 7, part 2

* Convert 2019 day 17 to use new Grid

* Initial code

* Part 1 passed

* Clean up 2018 and 2019

* Clean up 2024 problems

* Clean up unit tests and problem types

* Fix days 1 and 2 of 2020

* Fix 2020 day 3

* Fix 2020 day 4

* Fix 2020 day 5

* Part 2 solution