@@ -1,26 +1,22 @@
 package aoc.y2018.day9;
 
+import java.util.List;
 import java.util.regex.Pattern;
 
-public class Parser extends aoc.utils.Parser<Config> {
-    public Parser(String fileName) {
-        super(fileName);
-    }
-
+public class Parser implements aoc.utils.Parser<Config> {
     @Override
-    public Config parse() {
+    public Config parse(List<String> lines) {
         try {
-            var lines = readLines();
             var re = Pattern.compile("(\\d+) players; last marble is worth (\\d+) points");
-            var matcher = re.matcher(lines.get(0));
+            var matcher = re.matcher(lines.getFirst());
 
             if (!matcher.matches()) {
-                throw new Exception("Invalid input: " + lines.get(0));
+                throw new Exception("Invalid input: " + lines.getFirst());
             }
 
             return new Config(Integer.parseInt(matcher.group(1)), Integer.parseInt(matcher.group(2)));
         } catch (Exception ex) {
-            ex.printStackTrace();
+            System.out.println(ex.getMessage());
             return null;
         }
     }
