@@ -1,29 +1,18 @@
 package aoc.y2019.day10;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 import aoc.utils.geometry.Point;
 
-public class Part2 extends Solver {
-    public Part2(String fileName, int exp) {
-        super(fileName, exp);
-    }
+import java.util.ArrayList;
+import java.util.List;
 
+public class Part2 extends Solver {
     private List<List<Point>> sortSlopes(List<Point> asteroids, Point pt) {
         var groups = createGroups(asteroids, pt);
         var sorted = new ArrayList<List<Point>>();
 
         for (var group : groups) {
             var slopes = getSlopeMap(group, pt);
-            var keys = slopes.keySet().toArray();
-
-            Arrays.sort(keys);
-
-            for (var key : keys) {
-                sorted.add(slopes.get(key));
-            }
+            sorted.addAll(slopes.values());
         }
 
         return sorted;
@@ -56,8 +45,8 @@ public class Part2 extends Solver {
         while (count < 200) {
             var item = sorted.get(ndx);
 
-            if (item.size() != 0) {
-                lastPt = item.remove(0);
+            if (!item.isEmpty()) {
+                lastPt = item.removeFirst();
                 count += 1;
             }
 
