@@ -8,16 +8,12 @@ import java.util.Map;
 import aoc.utils.geometry.Bounds;
 import aoc.utils.geometry.Point;
 
-public class Parser extends aoc.utils.Parser<Maze> {
+public class Parser implements aoc.utils.Parser<Maze> {
     private char[][] matrix;
-    private Maze maze = new Maze();
-
-    public Parser(String fileName) {
-        super(fileName);
-    }
+    private final Maze maze = new Maze();
 
     private void readMatrix(List<String> lines) {
-        matrix = new char[lines.size()][lines.get(0).length()];
+        matrix = new char[lines.size()][lines.getFirst().length()];
 
         for (var y = 0; y < lines.size(); y += 1) {
             var line = lines.get(y);
@@ -135,10 +131,9 @@ public class Parser extends aoc.utils.Parser<Maze> {
         }
     }
 
-    public Maze parse() {
+    @Override
+    public Maze parse(List<String> lines) {
         try {
-            var lines = readLines();
-
             readMatrix(lines);
             parseMaze(matrix);
             findOuterJumps();
@@ -146,7 +141,7 @@ public class Parser extends aoc.utils.Parser<Maze> {
 
             return maze;
         } catch (Exception ex) {
-            ex.printStackTrace();
+            System.out.println(ex.getMessage());
             return null;
         }
     }
