@@ -1,14 +1,12 @@
 package aoc.y2019.intcode;
 
-public class Parser extends aoc.utils.Parser<long[]> {
-    public Parser(String fileName) {
-        super(fileName);
-    }
+import java.util.List;
 
-    public long[] parse() {
+public class Parser implements aoc.utils.Parser<long[]> {
+    @Override
+    public long[] parse(List<String> lines) {
         try {
-            var lines = readLines();
-            var line = lines.get(0);
+            var line = lines.getFirst();
             var parts = line.split(",");
             var prog = new long[parts.length];
 
@@ -18,7 +16,7 @@ public class Parser extends aoc.utils.Parser<long[]> {
 
             return prog;
         } catch (Exception ex) {
-            ex.printStackTrace();
+            System.out.println(ex.getMessage());
             return null;
         }
     }
